--- a/strings.conf
+++ b/strings.conf
@@ -305,6 +305,11 @@
 !system 1280 开启音乐
 !system 1281 按场景切换音乐
 !system 1282 数字灵摆图片
+!system 1283 在线卡查
+!system 1284 请输入卡查文本
+!system 1285 文本：
+!system 1286 确定
+!system 1287 取消
 !system 1290 忽略对方发言
 !system 1291 忽略观战者发言
 !system 1292 忽略时点
@@ -525,21 +530,22 @@
 !counter 0x44 指示物（弹带城壁龙）
 !counter 0x1045 鳞粉指示物
 !counter 0x46 指示物（刚鬼死斗）
+!counter 0x47 指示物（限制代码）
 #setnames, using tab for comment
-!setname 0x1 正义盟军	A・O・J
+!setname 0x1 正义盟军	A·O·J
 !setname 0x2 次世代	ジェネクス
 !setname 0x1002 真次世代	レアル·ジェネクス
-#!setname 0x2002 盟军·次世代	A・ジェネクス
+#!setname 0x2002 盟军·次世代	A·ジェネクス
 #setname 0x3 N/A
 !setname 0x4 亚马逊	アマゾネス
 !setname 0x5 秘仪之力	アルカナフォース
 !setname 0x6 暗黑界	暗黒界
-!setname 0x7 古代的机械	アンティーク・ギア
+!setname 0x7 古代的机械	アンティーク·ギア
 !setname 0x8 英雄	HERO
-!setname 0x3008 元素英雄	E・HERO
-#setname 0x5008 幻影英雄	V・HERO
+!setname 0x3008 元素英雄	E·HERO
+#setname 0x5008 幻影英雄	V·HERO
 #setname 0x6008 邪心英雄	E-HERO
-!setname 0xa008 假面英雄	M・HERO
+!setname 0xa008 假面英雄	M·HERO
 !setname 0xc008 命运英雄	D-HERO
 !setname 0x9 新宇	ネオス
 !setname 0xa 入魔	ヴェルズ
@@ -564,7 +570,7 @@
 !setname 0x2016 疾行机人	スピードロイド
 #!setname 0x17 同调	シンクロ
 !setname 0x1017 同调士	シンクロン
-!setname 0x2017 同调龙	シンクロ・ドラゴン
+!setname 0x2017 同调龙	シンクロ·ドラゴン
 !setname 0x18 云魔物	雲魔物
 !setname 0x19 剑斗兽	剣闘獣
 !setname 0x1a 黑蝎	黒蠍
@@ -620,9 +626,9 @@
 !setname 0x43 废品	ジャンク
 !setname 0x44 代行者
 !setname 0x45 恶魔	デーモン
-!setname 0x1045 红莲魔|恶魔	レッド・デーモン
+!setname 0x1045 红莲魔|恶魔	レッド·デーモン
 !setname 0x46 融合	融合/フュージョン
-!setname 0x1046 融合龙	フュージョン・ドラゴン
+!setname 0x1046 融合龙	フュージョン·ドラゴン
 !setname 0x47 宝石	ジェム
 !setname 0x1047 宝石骑士	ジェムナイト
 !setname 0x48 No.	No.
@@ -639,7 +645,7 @@
 #setname 0x4f 爆裂	バスター
 !setname 0x104f /爆裂体	／バスター
 !setname 0x50 蛇毒	ヴェノム
-!setname 0x1050 凶饿毒|蛇毒	スターヴ・ヴェノム
+!setname 0x1050 凶饿毒|蛇毒	スターヴ·ヴェノム
 !setname 0x51 零件	ガジェット
 !setname 0x52 守护者	ガーディアン
 !setname 0x53 星圣	セイクリッド
@@ -663,7 +669,7 @@
 !setname 0x65 侵略的	侵略の
 !setname 0x66 战士	ウォリアー
 !setname 0x1066 音响战士	音響戦士
-!setname 0x2066 磁石战士	マグネット・ウォリアー
+!setname 0x2066 磁石战士	マグネット·ウォリアー
 #setname 0x67 钢铁	アイアン
 #setname 0x68 铁皮	ブリキ
 !setname 0x69 圣刻	聖刻
@@ -674,7 +680,7 @@
 !setname 0x6e 魔导	魔導
 !setname 0x106e 魔导书	魔導書
 !setname 0x6f 英豪	ヒロイック
-!setname 0x106f 英豪挑战者	H・C
+!setname 0x106f 英豪挑战者	H·C
 #setname 0x206f 英豪冠军	H－C
 !setname 0x70 先史遗产	先史遺産
 !setname 0x71 魔偶甜点	マドルチェ
@@ -682,7 +688,7 @@
 !setname 0x1072 齿轮齿轮人	ギアギアーノ
 !setname 0x73 超量	エクシーズ
 !setname 0x1073 混沌超量	CX（カオスエクシーズ）
-!setname 0x2073 超量龙	エクシーズ・ドラゴン
+!setname 0x2073 超量龙	エクシーズ·ドラゴン
 !setname 0x74 水精鱗
 !setname 0x75 深渊	アビス
 !setname 0x76 纹章兽	紋章獣
@@ -694,18 +700,18 @@
 !setname 0x207a 圣剑	聖剣（せいけん）
 !setname 0x7b 银河	ギャラクシー
 !setname 0x107b 银河眼	ギャラクシーアイズ
-!setname 0x307b 银河眼时空龙	ギャラクシーアイズ・タキオン・ドラゴン
+!setname 0x307b 银河眼时空龙	ギャラクシーアイズ·タキオン·ドラゴン
 !setname 0x7c 炎舞
 !setname 0x7d 阳炎	ヘイズ
 !setname 0x107d 阳炎兽	陽炎獣
-!setname 0x7e 异热同心武器	ZW（ゼアル・ウェポン）
+!setname 0x7e 异热同心武器	ZW（ゼアル·ウェポン）
 !setname 0x7f 霍普	ホープ
 !setname 0x107f 希望皇 霍普	希望皇ホープ
 !setname 0x80 尘妖	ダストン
 !setname 0x81 炎王
 !setname 0x1081 炎王兽	炎王獣
 !setname 0x82 怒怒怒	ドドド
-!setname 0x83 机关傀儡	ギミック・パペット
+!setname 0x83 机关傀儡	ギミック·パペット
 !setname 0x84 燃烧拳击手	BK（バーニングナックラー）
 !setname 0x85 超级防御机器人	SDロボ
 !setname 0x86 光天使
@@ -723,9 +729,9 @@
 !setname 0x91 王家长眠之谷	ネクロバレー
 !setname 0x92 纹章	メダリオン
 !setname 0x93 电子	サイバー
-!setname 0x1093 电子龙	サイバー・ドラゴン
-!setname 0x2093 电子化天使	サイバー・エンジェル
-!setname 0x4093 电子暗黑	サイバー・ダーク/サイバーダーク
+!setname 0x1093 电子龙	サイバー·ドラゴン
+!setname 0x2093 电子化天使	サイバー·エンジェル
+!setname 0x4093 电子暗黑	サイバー·ダーク/サイバーダーク
 !setname 0x94 电子科技	サイバネティック
 !setname 0x95 升阶魔法	RUM
 !setname 0x96 电子鱼人	フィッシュボーグ
@@ -744,9 +750,9 @@
 !setname 0xa0 传说的骑士	伝説の騎士
 !setname 0xa1 传说之龙	伝説の竜
 #setname 0xa2 魔术	マジシャン
-!setname 0x10a2 黑魔术	ブラック・マジシャン
-!setname 0x20a2 魔术少女	マジシャン・ガール
-!setname 0x30a2 黑魔术少女	ブラック・マジシャン・ガール
+!setname 0x10a2 黑魔术	ブラック·マジシャン
+!setname 0x20a2 魔术少女	マジシャン·ガール
+!setname 0x30a2 黑魔术少女	ブラック·マジシャン·ガール
 !setname 0xa3 星尘	スターダスト
 !setname 0xa4 栗子球	クリボー
 !setname 0x10a4 羽翼栗子球	ハネクリボー
@@ -776,8 +782,8 @@
 !setname 0xb6 外神
 !setname 0xb7 旧神
 !setname 0xb8 古神
-!setname 0xb9 烈焰加农炮	ブレイズ・キャノン
-!setname 0xba 急袭猛禽	RR（レイド・ラプターズ）
+!setname 0xb9 烈焰加农炮	ブレイズ·キャノン
+!setname 0xba 急袭猛禽	RR（レイド·ラプターズ）
 !setname 0xbb 狱火机	インフェルノイド
 !setname 0xbc 人造人	人造人間
 !setname 0xbd 暗黑骑士 盖亚	暗黒騎士ガイア
@@ -785,7 +791,7 @@
 !setname 0xbf 灵使	霊使い
 !setname 0xc0 凭依装着	憑依装着
 !setname 0xc1 PSY骨架	PSYフレーム
-!setname 0xc2 动力工具	パワー・ツール
+!setname 0xc2 动力工具	パワー·ツール
 !setname 0xc3 锋利小鬼	エッジインプ
 !setname 0xc4 神数	セフィラ
 !setname 0xc5 炼狱	煉獄
@@ -799,7 +805,7 @@
 !setname 0xcd 水伶女	アクアアクトレス
 !setname 0xce 水族馆	アクアリウム
 !setname 0xcf 混沌	カオス
-!setname 0x10cf 混沌战士	カオス・ソルジャー
+!setname 0x10cf 混沌战士	カオス·ソルジャー
 !setname 0xd0 威风妖怪	マジェスペクター
 !setname 0xd1 灰篮	グレイドル
 !setname 0xd2 星际仙踪	Kozmo
@@ -807,7 +813,7 @@
 !setname 0xd4 伯吉斯异兽	バージェストマ
 !setname 0xd5 但丁	ダンテ
 !setname 0xd6 破坏剑	破壊剣
-!setname 0xd7 巴斯达·布雷达	バスター・ブレイダー
+!setname 0xd7 巴斯达·布雷达	バスター·ブレイダー
 !setname 0xd8 雾动机龙	ダイナミスト
 !setname 0xd9 不知火
 !setname 0xda 龙魔王	竜魔王
@@ -826,10 +832,10 @@
 !setname 0xe4 精灵剑士	エルフの剣士
 !setname 0xe5 光波	サイファー
 !setname 0xe6 花札卫	花札衛
-!setname 0xe7 沉默剑士	サイレント・ソードマン
-!setname 0xe8 沉默魔术师	サイレント・マジシャン
+!setname 0xe7 沉默剑士	サイレント·ソードマン
+!setname 0xe8 沉默魔术师	サイレント·マジシャン
 !setname 0xe9 磁石战士	磁石の戦士(じしゃくのせんし)
-!setname 0xea 水晶机巧|非「机巧」	クリストロン
+!setname 0xea 水晶机巧	クリストロン
 !setname 0xeb 化合兽	化合獣
 #!setname 0xec	魔界	魔界
 !setname 0x10ec 魔界剧团	魔界劇団
@@ -840,17 +846,17 @@
 !setname 0x10ee 秘旋谍装备	SPYRAL GEAR
 !setname 0x20ee 秘旋谍任务	SPYRAL MISSION
 !setname 0xef 堕天使
-!setname 0xf0 风魔女	WW（ウィンド・ウィッチ）
+!setname 0xf0 风魔女	WW（ウィンド·ウィッチ）
 !setname 0xf1 十二兽	十二獣
 !setname 0xf2 灵摆	ペンデュラム
-!setname 0x10f2 灵摆龙	ペンデュラム・ドラゴン
+!setname 0x10f2 灵摆龙	ペンデュラム·ドラゴン
 !setname 0x20f2 灵摆读阵	ペンデュラムグラフ
 !setname 0xf3 捕食	プレデター
 !setname 0x10f3 捕食植物
 !setname 0xf4 召唤兽	召喚獣
 !setname 0xf5 甘多拉	ガンドラ
 !setname 0xf6 摩天楼
-!setname 0xf7 抒情歌鸲	LL（リリカル・ルスキニア）
+!setname 0xf7 抒情歌鸲	LL（リリカル·ルスキニア）
 #!setname 0xf8 霸王	覇王
 !setname 0x10f8 霸王门	覇王門
 !setname 0x20f8 霸王眷龙	覇王眷竜
@@ -862,7 +868,7 @@
 !setname 0xfe 星遗物	星遺物
 !setname 0xff 幻透翼	クリアウィング
 !setname 0x100 化学结合	ボンディング
-!setname 0x101 码语者	コード・トーカー
+!setname 0x101 码语者	コード·トーカー
 !setname 0x102 弹丸	ヴァレット
 !setname 0x103 幻变骚灵	オルターガイスト
 !setname 0x104 机怪虫	クローラー
@@ -877,5 +883,8 @@
 !setname 0x10d 魔导兽	魔導獣
 !setname 0x10e 进化药	進化薬
 !setname 0x10f 枪管	ヴァレル
-!setname 0x110 眼纳祭神	アイズ・サクリファイス
-!setname 0x111 武装龙	アームド・ドラゴン
+!setname 0x110 眼纳祭神	アイズ·サクリファイス
+!setname 0x111 武装龙	アームド·ドラゴン
+!setname 0x400d 元素灵剑士	エレメントセイバー
+!setname 0x112 灵神	霊神
+!setname 0x113 梦幻崩影	トロイメア
