--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,8 @@ install:
   - xcopy /E event\WIN32-Code event\include
   
   - bash -c "curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://download.savannah.gnu.org/releases/freetype/freetype-2.9.tar.bz2 ; exit 0"
-  - tar xf freetype-2.8.1.tar.bz2
-  - move freetype-2.8.1 freetype
+  - tar xf freetype-2.9.tar.bz2
+  - move freetype-2.9.tar.bz2
   
   - bash -c "curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name http://downloads.sourceforge.net/irrlicht/irrlicht-1.8.4.zip ; exit 0"
   - 7z x irrlicht-1.8.4.zip
