--- a/strings.conf
+++ b/strings.conf
@@ -310,6 +310,7 @@
 !system 1285 文本：
 !system 1286 确定
 !system 1287 取消
+!system 1288 上位手抄网
 !system 1290 忽略对方发言
 !system 1291 忽略观战者发言
 !system 1292 忽略时点
@@ -886,5 +887,8 @@
 !setname 0x110 眼纳祭神	アイズ·サクリファイス
 !setname 0x111 武装龙	アームド·ドラゴン
 !setname 0x400d 元素灵剑士	エレメントセイバー
-!setname 0x112 灵神	霊神
-!setname 0x113 梦幻崩影	トロイメア
+!setname 0x112 梦幻崩影	トロイメア
+!setname 0x113 灵神	霊神
+!setname 0x114 空牙团	空牙団
+!setname 0x115 闪刀	閃刀
+!setname 0x1115 闪刀姬	閃刀姫
