--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "script"]
 	path = script
 	url = https://github.com/Fluorohydride/ygopro-scripts.git
+[submodule "pics"]
+	path = pics
+	url = https://github.com/Ygoproco/Live-images.git
