--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,9 +61,9 @@ after_build:
   - mv irrklang\bin\win32-visualStudio\irrKlang.dll .
   - mv irrklang\bin\win32-visualStudio\ikpMP3.dll .
   - mkdir replay
-  - bash -c "curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://github.com/mycard/ygopro-images/archive/master.zip ; exit 0"
-  - 7z x ygopro-images-master.zip
-  - xcopy /E ygopro-images-master\pics\* .
+  - bash -c "curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://github.com/fallenstardust/YGOMobile-pics/archive/master.zip ; exit 0"
+  - 7z x YGOMobile-pics-master.zip
+  - xcopy /E YGOMobile-pics-master\* .
   - bash -c "curl --retry 5 --connect-timeout 30 --location --remote-header-name --remote-name https://github.com/mycard/ygopro-images-field/archive/master.zip ; exit 0"
   - 7z x ygopro-images-field-master.zip
   - xcopy /E ygopro-images-field-master\* .
