--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/Fluorohydride/ygopro-scripts.git
 [submodule "pics"]
 	path = pics
-	url = git@github.com:fallenstardust/YGOMobile-pics.git
+	url = https://github.com/fallenstardust/YGOMobile-pics.git
